<resources>
    <string name="app_name">Tetris</string>
    <string name="score">SCORE</string>
    <string name="maxScore">BEST SCORE</string>
    <string name="start">Start</string>
    <string name="leftButton">L</string>
    <string name="rightButton">R</string>
    <string name="rotateButton">Rotate</string>
    <string name="dwonButton">D</string>
    <string name="fallenButton">Fallen</string>
    <string name="stop">Stop</string>
    <string name="next">Next</string>
    <string name="_0">0</string>
    <string name="game_time">GAME TIME</string>
    <string name="_00_00">00:00</string>
    <string name="hold">Hold</string>
    <string name="holdButton">HOLD</string>
</resources>
